Fix: events break in week view

--- a/resources/assets/sass/views/weekView.scss
+++ b/resources/assets/sass/views/weekView.scss
@@ -23,6 +23,10 @@
   text-decoration: none;
 }
 
+.card-columns .card{
+  break-inside: avoid-column;
+}
+
 .card {
   margin-bottom: 0px !important;
 }
